--- a/module1.html
+++ b/module1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Travel Blog</title>
+    <link rel="shortcut icon" href="image.jpg/travel icon.jpg" type="image/x-icon">
 </head>
 <body>
     
