add a span tag,bold tag and italic tag

--- a/module1.html
+++ b/module1.html
@@ -9,13 +9,13 @@
 <body>
     <!-- header section -->
      <div>
-        <h1>My Travelling Blog Paragraph</h1>
+        <h1> <i>My Travelling Blog Paragraph</i></h1>
      </div>
 
      <!--main section -->
      <div>
         <h2>My Travel Experience</h2>
-        <p>Stepping into the vibrant chaos of [City/Country Name], I felt instantly alive, the air thick with unfamiliar spices and the melodic chatter of a new language, a stark contrast to home. My first day was a sensory overload; from navigating bustling markets filled with handcrafted treasures to savoring street food that danced on my tongue, every moment was a discovery. I wandered ancient streets, my camera working overtime to capture the faded grandeur of colonial buildings and the infectious smiles of locals, each interaction a tiny window into a rich, resilient culture. <br> The journey wasn't just about seeing sights; it was about feeling the pulse of a place, finding beauty in unexpected corners, and realizing how much more there is to the world beyond my routine, leaving me refreshed and eager for the next adventure. </p>
+        <p>Stepping into the vibrant chaos of [City/Country Name], I felt instantly alive, the air thick with unfamiliar spices and the melodic chatter of a new language, a stark contrast to home. My first day was a sensory overload; from navigating bustling markets filled with handcrafted treasures to savoring street food that danced on my tongue, <span> <b>every moment was a discovery</b></span>. I wandered ancient streets, my camera working overtime to capture the faded grandeur of colonial buildings and the infectious smiles of locals, each interaction a tiny window into a rich, resilient culture. <br> The journey wasn't just about seeing sights; it was about feeling the pulse of a place, finding beauty in unexpected corners, and realizing how much more there is to the world beyond my routine, .... <button>Read more</button> </p>
      </div>
 </body>
 </html>
