added a some file

--- a/module1.html
+++ b/module1.html
@@ -17,5 +17,40 @@
         <h2>My Travel Experience</h2>
         <p>Stepping into the vibrant chaos of [City/Country Name], I felt instantly alive, the air thick with unfamiliar spices and the melodic chatter of a new language, a stark contrast to home. My first day was a sensory overload; from navigating bustling markets filled with handcrafted treasures to savoring street food that danced on my tongue, <span> <b>every moment was a discovery</b></span>. I wandered ancient streets, my camera working overtime to capture the faded grandeur of colonial buildings and the infectious smiles of locals, each interaction a tiny window into a rich, resilient culture. <br> The journey wasn't just about seeing sights; it was about feeling the pulse of a place, finding beauty in unexpected corners, and realizing how much more there is to the world beyond my routine, .... <button>Read more</button> </p>
      </div>
+
+     <div>
+        <h3>Some of my important things</h3>
+        <ol>
+            <li>Mobile</li>
+            <li>Charger</li>
+            <li>Camera</li>
+            <li>Money</li>
+            <li>passport</li>
+        </ol>
+     </div>
+
+     <div>
+        <h3><strong>My Favourite Food</strong></h3>
+        <ul>
+            <li>Biriyani</li>
+            <li>Khicuri</li>
+            <li>Beef</li>
+            <li>Coffe</li>
+            <li>Pitha</li>
+        </ul>
+     </div>
+
+     <div>
+        <h4>Picture of food</h4>
+        <img src="image.jpg/chicken-biryani.webp" alt="Pakistani chicken-biryani Biriyani " width="500px" height="500px">
+     </div>
+
+     <!--footer section -->
+     <div>
+        <h5>
+            
+            Thank you for visiting my travel blog. I hope you enjoyed reading about my experiences and favourite things. Stay safe!
+        </h5>
+     </div>
 </body>
 </html>
